--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             position: fixed;
             top: 50%;
             left: 50%;
+            font-size: 60px;
 
         }
 
@@ -70,55 +71,122 @@
     </style>
 </head>
 <body>
-    <img src="logo_acai_zero_grau.png" alt="Logo Açaí Zero Grau" class="logo">
+    <div style="position: relative; width: 100%; height: 0; padding-top: 10.0000%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxWlIk7Mo&#x2F;view?embed">
+        </iframe>
+    </div> 
     <h1>Cardápio</h1>
+    
     <div class="menu-item">
-        <img src="acai_tradicional.png">
+    <div style="position: relative; width: 100%; height: 0; padding-top: 60.0000%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxWzdywf8&#x2F;view?embed">
+        </iframe>
+        </div>
         <h2>Açaí com Morango - R$ 12,50</h2>
         <button onclick="openPopup('Açaí com Morango', 12.50)">Personalizar</button>
     </div>
     <div class="menu-item">
-        <img src="acai_tradicional.png">
+        <div style="position: relative; width: 100%; height: 0; padding-top: 60.0000%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxWzdywf8&#x2F;view?embed">
+        </iframe>
+        </div>
         <h2>Açaí com Frutas - R$ 16,00</h2>
         <button onclick="openPopup('Açaí com Frutas', 16.00)">Personalizar</button>
     </div>
     <div class="menu-item">
-        <img src="acai_tradicional.png">
+        <div style="position: relative; width: 100%; height: 0; padding-top: 60.0000%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxWzdywf8&#x2F;view?embed">
+        </iframe>
+        </div>
         <h2>Açaí com Nutella - R$ 22,50</h2>
         <button onclick="openPopup('Açaí com Nutella', 22.50)">Personalizar</button>
     </div>
       <div class="menu-item">
-        <img src="acai_tradicional.png">
+        <div style="position: relative; width: 100%; height: 0; padding-top: 60.0000%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxWzdywf8&#x2F;view?embed">
+        </iframe>
+        </div>
         <h2>Açaí com Jujuba - R$ 18,50</h2>
         <button onclick="openPopup('Açaí com Jujuba', 18.50)">Personalizar</button>
     </div>
     <div class="menu-item">
-        <img src="acai_tradicional.png">
+        <div style="position: relative; width: 100%; height: 0; padding-top: 60.0000%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxWzdywf8&#x2F;view?embed">
+        </iframe>
+        </div>
         <h2>Açaí com Morango - R$ 12,50</h2>
         <button onclick="openPopup('Açaí com Morango', 12.50)">Personalizar</button>
     </div>
     <div class="menu-item">
-        <img src="acai_tradicional.png">
+        <div style="position: relative; width: 100%; height: 0; padding-top: 60.0000%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxWzdywf8&#x2F;view?embed">
+        </iframe>
+        </div>
         <h2>Açaí com Frutas - R$ 16,00</h2>
         <button onclick="openPopup('Açaí com Frutas', 16.00)">Personalizar</button>
     </div>
     <div class="menu-item">
-        <img src="acai_tradicional.png">
+        <div style="position: relative; width: 100%; height: 0; padding-top: 60.0000%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxWzdywf8&#x2F;view?embed">
+        </iframe>
+        </div>
         <h2>Açaí com Nutella - R$ 22,50</h2>
         <button onclick="openPopup('Açaí com Nutella', 22.50)">Personalizar</button>
     </div>
       <div class="menu-item">
-        <img src="acai_tradicional.png">
+        <div style="position: relative; width: 100%; height: 0; padding-top: 60.0000%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxWzdywf8&#x2F;view?embed">
+        </iframe>
+        </div>
         <h2>Açaí com Jujuba - R$ 18,50</h2>
         <button onclick="openPopup('Açaí com Jujuba', 18.50)">Personalizar</button>
     </div>
     <div class="menu-item">
-        <img src="acai_tradicional.png">
+        <div style="position: relative; width: 100%; height: 0; padding-top: 60.0000%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxWzdywf8&#x2F;view?embed">
+        </iframe>
+        </div>
         <h2>Açaí com Morango - R$ 12,50</h2>
         <button onclick="openPopup('Açaí com Morango', 12.50)">Personalizar</button>
     </div>
     <div class="menu-item">
-        <img src="acai_tradicional.png">
+        <div style="position: relative; width: 100%; height: 0; padding-top: 60.0000%;
+        padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+        border-radius: 8px; will-change: transform;">
+        <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+        src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxWzdywf8&#x2F;view?embed">
+        </iframe>
+        </div>
         <h2>Açaí com Frutas - R$ 16,00</h2>
         <button onclick="openPopup('Açaí com Frutas', 16.00)">Personalizar</button>
     </div>
