--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             left: 0;
             right: 0;
             height: 500px;
-            background-image: url(../img/bg-icons-2.png);
+            background-image: url(bg-icons-2.png);
         }
     </style>
     <body>
